# nixos-easy-install

./: .gitignore  README.md  flake.nix  shell.nix
.github/workflows/: build-initrd.yml  build-installer.yml
docs/: SECURITY.md  TESTING.md
initrd/: README.md  default.nix  x1e.nix
installer/: Cargo.toml  default.nix
installer/.cargo/: config.toml
installer/src/: assets.rs  bootloader.rs  config.rs  install.rs  loopback.rs  main.rs  switching.rs  system.rs  ui.rs
