[package]
name = "nixos-easy-install"
version = "0.1.0"
edition = "2021"
authors = ["Joshua Holmes"]
description = "Windows installer for NixOS"
license = "GPL-3.0"

[dependencies]
# GUI
eframe = "0.31"
egui = "0.31"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP for downloading
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Unix-specific (for non-Windows builds)
[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[build-dependencies]
embed-resource = "2"  # For Windows exe icon/manifest

[[bin]]
name = "nixos-install"
path = "src/main.rs"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary
